--- a/payment.html
+++ b/payment.html
@@ -240,8 +240,32 @@
                 <option value="c4" >c4</option>
               </select>
           </div>
-          <div class="calenderDive">
-            Calender<br/>
+          <div class="priceDiv">
+            <h4 class="total-price"> Calender: </h4>
+          </div>
+          <div class="calenderDive" id="calender-div">
+            <div class="calender">
+              <div class="month-div">
+                <span class="prev-month"> < </span>
+                <span> <h3></h3></span>
+                <span class="next-month"> > </span>
+              </div>
+              <div class="week-end">
+                  <div>Su</div>
+                  <div>Mo</div>
+                  <div>Tu</div>
+                  <div>We</div>
+                  <div>Th</div>
+                  <div>Fr</div>
+                  <div>Sa</div>
+              </div>
+              <div class="days">
+                  
+              </div>
+            </div>
+          </div>
+          <div class="dayDiv">
+            <h4 class="div-day"> Your Day: <span id="day-choose-text"></span></h4>
           </div>
           <div class="priceDiv">
             <h4 class="total-price"> Price: <span id="price-text">100$</span></h4>
