--- a/about-ayamedica.html
+++ b/about-ayamedica.html
@@ -85,7 +85,7 @@
                     <div class="link-text">Careers</div>
                   </a>
                 </div>
-                <a href="https://clinic.ayamedica.com/login" class="menu-button btn-transition w-button">For Clinic</a>
+                <a href="comming-soon.html" target="_blank"  class="menu-button btn-transition w-button">For Clinic</a>
                 <!-- <div class="wg-element-2">
                   <div data-w-id="39a04d75-ed1f-6ba8-5f1a-a19d6d38d291" class="wg-element-wrapper sw6">
                     <div data-hover="true" data-delay="300" data-w-id="39a04d75-ed1f-6ba8-5f1a-a19d6d38d292" class="wg-dropdown-1 w-dropdown">
