--- a/contact-us.html
+++ b/contact-us.html
@@ -65,7 +65,7 @@
                     <div class="link-text">Careers</div>
                   </a>
                 </div>
-                <a href="https://clinic.ayamedica.com/login" class="menu-button btn-transition w-button">For Clinic</a>
+                <a href="comming-soon.html" target="_blank"  class="menu-button btn-transition w-button">For Clinic</a>
                 <!-- <div class="wg-element-2">
                   <div data-w-id="39a04d75-ed1f-6ba8-5f1a-a19d6d38d291" class="wg-element-wrapper sw6">
                     <div data-hover="true" data-delay="300" data-w-id="39a04d75-ed1f-6ba8-5f1a-a19d6d38d292" class="wg-dropdown-1 w-dropdown">
@@ -172,7 +172,7 @@ function updateSW6FlagDropdownLinks(currentLang){
                 <div class="more-info-item"><img src="images/email-icon.png" loading="lazy" alt="" class="more-info-icon">
                   <div class="more-info-content">
                     <h3 class="more-info-title">Email</h3>
-                    <div class="more-info-text md-p">cs@ayamedica.com</div>
+                    <div class="more-info-text md-p">info@ayamedica.com</div>
                   </div>
                 </div>
                 <div class="more-info-item"><img src="images/call-icon.png" loading="lazy" width="850" srcset="images/call-icon-p-500.png 500w, images/call-icon-p-800.png 800w, images/call-icon.png 820w" sizes="(max-width: 479px) 100vw, (max-width: 1439px) 30px, (max-width: 1919px) 2vw, 30px" alt="" class="more-info-icon">
