--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -259,7 +259,7 @@ function updateSW6FlagDropdownLinks(currentLang){
       <p class="sub-4-points">b ) you must immediately cease all activities authorized by this EULA;</p>
       <p class="sub-4-points">c ) you must immediately delete or remove the App from all Devices, and immediately destroy all copies of the App and Documents then in your possession, custody or control and certify to us that you have done so.</p>
       <p class="sub-2-points">9-<strong>COMMUNICATION BETWEEN US</strong></p>
-      <p class="sub-3-points">9-1 If you wish to contact us in writing, or if any condition in this EULA requires you to give us notice in writing, you can send this to us by e-mail at cs@ayamedica.com.</p>
+      <p class="sub-3-points">9-1 If you wish to contact us in writing, or if any condition in this EULA requires you to give us notice in writing, you can send this to us by e-mail at info@ayamedica.com.</p>
       <p class="sub-3-points">9-2 If we have to contact you or give you notice in writing, we will do so by e-mail to the email address you provide to us in your request for the App.</p>
       <p class="sub-2-points">10-<strong>EVENTS OUTSIDE OUR CONTROL</strong></p>
       <p class="sub-3-points">10-1 We will not be liable or responsible for any failure to perform, or delay in performance of, any of our obligations under this EULA that is caused by any act or event beyond our reasonable control, includingfailure of public or private telecommunications networks (Event outside Our Control).</p>
