--- a/events.html
+++ b/events.html
@@ -125,7 +125,7 @@
                     <div class="link-text">Careers</div>
                   </a>
                 </div>
-                <a href="https://clinic.ayamedica.com/login" class="menu-button btn-transition w-button">For Clinic</a>
+                <a href="comming-soon.html" target="_blank"  class="menu-button btn-transition w-button">For Clinic</a>
                 <!-- <div class="wg-element-2">
                   <div data-w-id="39a04d75-ed1f-6ba8-5f1a-a19d6d38d291" class="wg-element-wrapper sw6">
                     <div data-hover="true" data-delay="300" data-w-id="39a04d75-ed1f-6ba8-5f1a-a19d6d38d292"
@@ -209,6 +209,9 @@
     <div class="section hero wf-section">
       <div class="container hero w-container">
         <h1 class="hero-heading"><strong class="bold-text">UPCOMING EVENT<br></strong></h1>
+        <br/>
+        <br/>
+        <h1 class="hero-heading"><strong class="bold-text">FROM 20 NOV TO 20 DEC<br></strong></h1>
         <div class="hero-wrap"><img src="images/FEMTO-LASIK-POSTER-2.png" loading="eager"
             sizes="(max-width: 479px) 20vw, (max-width: 1439px) 68vw, 852px" height="125" width="125" alt=""
             class="hero-img"></div>
