--- a/payment.html
+++ b/payment.html
@@ -250,7 +250,7 @@
               <button type="button" class="Dec-Nov-Btn">December</button>
             </div>
             <div style="padding: 10px;">
-              <i> At Least 2 Days Between Comming And Leaving Day</i>
+              <i> You have to book at least 3 nights.</i>
             </div>
         </div>
           <div class="cal-div">
