--- a/events.html
+++ b/events.html
@@ -88,11 +88,27 @@
       }
     }
   </style>
+
+
   <meta name="google-site-verification" content="MW4cdq19zMBLdYbKlaYKUPVomVI6p2uPdN35P7X3EiI">
 </head>
 
 <body>
+  
+  
+  
   <div class="page-wrapper">
+    <div id="Youtube-Frame">
+      <div class="closingIcon" onclick="handleYoutubeFrame(this)">x</div>
+      <iframe 
+      id="youtube-iframe"
+      src="https://www.youtube.com/embed/D1S-oRz9Mho" 
+      title="YouTube video player" 
+      allowscriptaccess="always"
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen></iframe>
+    </div>
     <div class="primary-navigation">
       <div data-collapse="tiny" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
         role="banner" class="primary-navbar w-nav">
@@ -313,7 +329,9 @@
     </div>
   </div>
 
+  
   <script src="./js/AyaMedica.js" type="text/javascript"></script>
+  
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=606f297a6f67432330945311"
     type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
