--- a/careers.html
+++ b/careers.html
@@ -38,9 +38,7 @@
           <a href="index.html" class="logo-wrapper remove-mr w-nav-brand"><img src="images/Ayamedica-new-logom.png" loading="lazy" width="300" height="Auto" sizes="(max-width: 767px) 65px, (max-width: 1439px) 75px, 150px" srcset="images/Ayamedica-new-logom-p-500.png 500w, images/Ayamedica-new-logom-p-800.png 800w" alt="" class="logo-image"></a>
           <nav role="navigation" class="nav-menu-2 w-nav-menu">
             <div class="menu-butoon-wrapper">
-              <a href="events.html" class="primary-link w-inline-block">
-                <div class="link-text">Events</div>
-              </a>
+             
               <a href="about-ayamedica.html" class="primary-link w-inline-block">
                 <div class="link-text">About Us</div>
               </a>
@@ -50,6 +48,9 @@
               <a href="our-partners.html" class="primary-link w-inline-block">
                 <div class="link-text">Our Partners</div>
               </a>
+              <a href="events.html" class="primary-link w-inline-block">
+                <div class="link-text">Events</div>
+              </a>
               <a href="contact-us.html" class="primary-link w-inline-block">
                 <div class="link-text">Contact Us</div>
               </a>
@@ -57,7 +58,7 @@
                 <div class="link-text">Careers</div>
               </a>
             </div>
-            <a href="comming-soon.html" target="_blank"  class="menu-button btn-transition w-button">For Clinic</a>
+            <a href="comming-soon.html"  class="menu-button btn-transition w-button">For Clinic</a>
             <!-- <div class="wg-element-2">
               <div data-w-id="39a04d75-ed1f-6ba8-5f1a-a19d6d38d291" class="wg-element-wrapper sw6">
                 <div data-hover="true" data-delay="300" data-w-id="39a04d75-ed1f-6ba8-5f1a-a19d6d38d292" class="wg-dropdown-1 w-dropdown">
@@ -143,7 +144,7 @@ function updateSW6FlagDropdownLinks(currentLang){
     <h1 class="heading-10">Fill the form</h1>
     <div class="div-block-14">
       <div class="form-block-3 w-form">
-        <form id="email-form-2" name="email-form-2" data-name="Email Form 2" method="get" class="form-6"><label for="name" class="field-label-3">Name</label><input type="text" class="text-field-4 w-input" autofocus="true" maxlength="256" name="name" data-name="Name" placeholder="Alex Shanon" id="name" required=""><label for="name-3" class="field-label-4">Phone Number</label><input type="tel" class="text-field-4 w-input" autofocus="true" maxlength="256" name="name-3" data-name="Name 3" placeholder="Enter Phone number with country code" id="name-3" required=""><label for="name-2" class="field-label-5">Email Address</label><input type="email" class="text-field-4 w-input" autofocus="true" maxlength="256" name="name-2" data-name="Name 2" placeholder="help@ayamedica.com" id="name-2" required=""><label for="email-3" class="field-label-6">Date of Birth</label><input type="email" class="text-field-4 w-input" maxlength="256" name="email-3" data-name="Email 3" placeholder="" id="email-3" required=""><input type="submit" value="Submit" data-wait="Please wait..." class="submit-button w-button"></form>
+        <form id="email-form-2" name="email-form-2" data-name="Email Form 2" method="get" class="form-6"><label for="name" class="field-label-3">Name</label><input type="text" class="text-field-4 w-input" autofocus="true" maxlength="256" name="name" data-name="Name" placeholder="Alex Shanon" id="name" required=""><label for="name-3" class="field-label-4">Phone Number</label><input type="tel" class="text-field-4 w-input" autofocus="true" maxlength="256" name="name-3" data-name="Name 3" placeholder="Enter Phone number with country code" id="name-3" required=""><label for="name-2" class="field-label-5">Email Address</label><input type="email" class="text-field-4 w-input" autofocus="true" maxlength="256" name="name-2" data-name="Name 2" placeholder="help@ayamedica.com" id="name-2" required=""><label for="email-3" class="field-label-6">Upload your resume</label><input type="file" class="text-field-4 w-input" maxlength="256" name="email-3" data-name="Email 3" placeholder="" id="email-3" required=""><input type="submit" value="Submit" data-wait="Please wait..." class="submit-button w-button"></form>
         <div class="w-form-done">
           <div>Thank you! Your submission has been received!</div>
         </div>
