--- a/events.html
+++ b/events.html
@@ -122,9 +122,7 @@
                   class="logo-image"></a>
               <nav role="navigation" class="nav-menu-2 w-nav-menu">
                 <div class="menu-butoon-wrapper">
-                  <a href="events.html" aria-current="page" class="primary-link w-inline-block w--current">
-                    <div class="link-text">Events</div>
-                  </a>
+                 
                   <a href="about-ayamedica.html" class="primary-link w-inline-block">
                     <div class="link-text">About Us</div>
                   </a>
@@ -134,6 +132,9 @@
                   <a href="our-partners.html" class="primary-link w-inline-block">
                     <div class="link-text">Our Partners</div>
                   </a>
+                  <a href="events.html" aria-current="page" class="primary-link w-inline-block w--current">
+                    <div class="link-text">Events</div>
+                  </a>
                   <a href="contact-us.html" class="primary-link w-inline-block">
                     <div class="link-text">Contact Us</div>
                   </a>
@@ -141,7 +142,7 @@
                     <div class="link-text">Careers</div>
                   </a>
                 </div>
-                <a href="comming-soon.html" target="_blank"  class="menu-button btn-transition w-button">For Clinic</a>
+                <a href="comming-soon.html" class="menu-button btn-transition w-button">For Clinic</a>
                 <!-- <div class="wg-element-2">
                   <div data-w-id="39a04d75-ed1f-6ba8-5f1a-a19d6d38d291" class="wg-element-wrapper sw6">
                     <div data-hover="true" data-delay="300" data-w-id="39a04d75-ed1f-6ba8-5f1a-a19d6d38d292"
@@ -224,12 +225,17 @@
     </div>
     <div class="section hero wf-section">
       <div class="container hero w-container">
-        <h1 class="hero-heading"><strong class="bold-text">UPCOMING EVENT<br></strong></h1>
+        <br/>
+        <br/>
+        <h1 class="hero-heading"><strong class="page-title mb-20">UPCOMING EVENT<br></strong></h1>
+        <br/>
         <br/>
         <br/>
         <h1 class="hero-heading"><strong class="bold-text">FROM 20 NOV TO 20 DEC<br></strong></h1>
-        <div class="hero-wrap"><img src="images/FEMTO-LASIK-POSTER-2.png" loading="eager"
-            sizes="(max-width: 479px) 20vw, (max-width: 1439px) 68vw, 852px" height="125" width="125" alt=""
+        <br/>
+        <br/>
+        <div class="hero-wrap"><img src="images/FEMTO LASIK POSTER 2.svg" loading="eager"
+             height="125" width="auto" alt=""
             class="hero-img"></div>
       </div>
     </div>
