--- a/index.html
+++ b/index.html
@@ -103,9 +103,7 @@
                   class="logo-image"></a>
               <nav role="navigation" class="nav-menu-2 w-nav-menu">
                 <div class="menu-butoon-wrapper">
-                  <a href="events.html" class="primary-link w-inline-block">
-                    <div class="link-text">Events</div>
-                  </a>
+                  
                   <a href="about-ayamedica.html" class="primary-link w-inline-block">
                     <div class="link-text">About Us</div>
                   </a>
@@ -115,6 +113,9 @@
                   <a href="our-partners.html" class="primary-link w-inline-block">
                     <div class="link-text">Our Partners</div>
                   </a>
+                  <a href="events.html" class="primary-link w-inline-block">
+                    <div class="link-text">Events</div>
+                  </a>
                   <a href="contact-us.html" class="primary-link w-inline-block">
                     <div class="link-text">Contact Us</div>
                   </a>
@@ -122,7 +123,7 @@
                     <div class="link-text">Careers</div>
                   </a>
                 </div>
-                <a href="comming-soon.html" target="_blank" class="menu-button btn-transition w-button">For Clinic</a>
+                <a href="comming-soon.html" class="menu-button btn-transition w-button">For Clinic</a>
                 <!-- <div class="wg-element-2">
                   <div data-w-id="39a04d75-ed1f-6ba8-5f1a-a19d6d38d291" class="wg-element-wrapper sw6">
                     <div data-hover="true" data-delay="300" data-w-id="39a04d75-ed1f-6ba8-5f1a-a19d6d38d292"
@@ -219,8 +220,7 @@
               </div>
             </div>
             <div class="text-wrap mb-40">
-              <p class="big-p"><span class="text-span-22">AYAMEDICA </span>is the smartest medical record app that gives
-                you access to patient’s and family member’s healthcare information in one organized, convenient place.
+              <p class="big-p"><span class="text-span-22">Ayamedica </span>is the smartest medical record app, providing access to patients and family members healthcare information in one organized, and convenient place.
               </p>
             </div>
             <div class="hero-btns home-button">
@@ -273,7 +273,7 @@
               </div>
               <div class="services-content">
                 <h3 class="services-heading">Schedule Appointments </h3>
-                <p class="services-text"><strong>Book online consultations </strong>and referrals at the press of a
+                <p class="services-text">Book online consultations at a press of a
                   button.</p>
               </div>
             </div>
@@ -284,7 +284,7 @@
               </div>
               <div class="services-content">
                 <h3 class="services-heading">Organize Personal Healthcare</h3>
-                <p class="services-text"><strong>Secure and store your medical health records </strong>&amp;<strong>
+                <p class="services-text">Secure and store your health records and history, and <strong>
                   </strong>take control of your health at anytime and anywhere.</p>
               </div>
             </div>
@@ -295,7 +295,7 @@
               </div>
               <div class="services-content">
                 <h3 class="services-heading">Share Medical Records</h3>
-                <p class="services-text"><strong>Safely share your medical records </strong>with family members, medical
+                <p class="services-text">Safely share your medical records with family members, medical
                   professionals, and others in our network.</p>
               </div>
             </div>
