--- a/payment.html
+++ b/payment.html
@@ -106,9 +106,7 @@
                   class="logo-image"></a>
               <nav role="navigation" class="nav-menu-2 w-nav-menu">
                 <div class="menu-butoon-wrapper">
-                  <a href="events.html" aria-current="page" class="primary-link w-inline-block w--current">
-                    <div class="link-text">Events</div>
-                  </a>
+               
                   <a href="about-ayamedica.html" class="primary-link w-inline-block">
                     <div class="link-text">About Us</div>
                   </a>
@@ -118,6 +116,9 @@
                   <a href="our-partners.html" class="primary-link w-inline-block">
                     <div class="link-text">Our Partners</div>
                   </a>
+                  <a href="events.html" aria-current="page" class="primary-link w-inline-block w--current">
+                    <div class="link-text">Events</div>
+                  </a>
                   <a href="contact-us.html" class="primary-link w-inline-block">
                     <div class="link-text">Contact Us</div>
                   </a>
@@ -125,7 +126,7 @@
                     <div class="link-text">Careers</div>
                   </a>
                 </div>
-                <a href="comming-soon.html" target="_blank"  class="menu-button btn-transition w-button">For Clinic</a>
+                <a href="comming-soon.html" class="menu-button btn-transition w-button">For Clinic</a>
                 <!-- <div class="wg-element-2">
                   <div data-w-id="39a04d75-ed1f-6ba8-5f1a-a19d6d38d291" class="wg-element-wrapper sw6">
                     <div data-hover="true" data-delay="300" data-w-id="39a04d75-ed1f-6ba8-5f1a-a19d6d38d292"
@@ -286,6 +287,8 @@
           </div>
           <div class="priceDiv">
             <h4 class="total-price"> Price: <span id="price-text"></span></h4>
+          </div>
+          <div id="double-room">
           </div>
           <div class="bookDiv">
             <button class="goBook-btn" onclick="handleBookForm()" disabled> BOOK</button>
