--- a/about-ayamedica.html
+++ b/about-ayamedica.html
@@ -66,9 +66,7 @@
               <a href="index.html" class="logo-wrapper remove-mr w-nav-brand"><img src="images/Ayamedica-new-logom.png" loading="lazy" width="300" height="Auto" sizes="(max-width: 767px) 65px, (max-width: 1439px) 75px, 150px" srcset="images/Ayamedica-new-logom-p-500.png 500w, images/Ayamedica-new-logom-p-800.png 800w" alt="" class="logo-image"></a>
               <nav role="navigation" class="nav-menu-2 w-nav-menu">
                 <div class="menu-butoon-wrapper">
-                  <a href="events.html" class="primary-link w-inline-block">
-                    <div class="link-text">Events</div>
-                  </a>
+                 
                   <a href="about-ayamedica.html" aria-current="page" class="primary-link w-inline-block w--current">
                     <div class="link-text">About Us</div>
                   </a>
@@ -78,6 +76,9 @@
                   <a href="our-partners.html" class="primary-link w-inline-block">
                     <div class="link-text">Our Partners</div>
                   </a>
+                  <a href="events.html" class="primary-link w-inline-block">
+                    <div class="link-text">Events</div>
+                  </a>
                   <a href="contact-us.html" class="primary-link w-inline-block">
                     <div class="link-text">Contact Us</div>
                   </a>
@@ -85,7 +86,7 @@
                     <div class="link-text">Careers</div>
                   </a>
                 </div>
-                <a href="comming-soon.html" target="_blank"  class="menu-button btn-transition w-button">For Clinic</a>
+                <a href="comming-soon.html" class="menu-button btn-transition w-button">For Clinic</a>
                 <!-- <div class="wg-element-2">
                   <div data-w-id="39a04d75-ed1f-6ba8-5f1a-a19d6d38d291" class="wg-element-wrapper sw6">
                     <div data-hover="true" data-delay="300" data-w-id="39a04d75-ed1f-6ba8-5f1a-a19d6d38d292" class="wg-dropdown-1 w-dropdown">
@@ -182,7 +183,7 @@ function updateSW6FlagDropdownLinks(currentLang){
           <div data-w-id="7364ce85-44c8-573c-b283-a63f327ff64d" style="opacity:0;-webkit-transform:translate3d(0, 30px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 30px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 30px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 30px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="about-content is--flex mb-100">
             <div class="small-heading">About us</div>
             <p class="big-p about center">At Ayamedica, we aspire to transform the healthcare industry by improving access and management of healthcare information. Ayamedica encompasses the most comprehensive medical history application with the sole purpose of easing the burden of managing health information on multiple parties.                                                                                                                        <br></p>
-            <p class="big-p about center">Ayamedica provides the ultimate solution by connecting the patient with their own medical history, as provided by the medical professional, in a method that is secure and discrete. Now, patients can have access to their medical records through the Ayamedica’s mobile and web application, facilitated and designed with a simple user interface that promotes security, transparency, and protection of patient health data. Your health care just got simpler and easier to manage!<br></p>
+            <p class="big-p about center">Ayamedica provides the ultimate solution by connecting the patient with their own medical history, as provided by the medical professional, in a method that is secure and discrete. Now, patients can have access to their medical records through the Ayamedica’s mobile application, facilitated and designed with a simple user interface that promotes security, transparency, and protection of patient's health data. Your health care just got simpler and easier to manage!<br></p>
           </div>
         </div>
       </div>
@@ -286,7 +287,7 @@ function updateSW6FlagDropdownLinks(currentLang){
                   <a data-w-tab="Tab 4" class="step-tabd-link w-inline-block w-tab-link">
                     <div class="step-number">4</div>
                     <div class="step-content">
-                      <h3 class="step-heading">Scheduling virtual and in-person appointments with doctors or clinics.<br>- Pet plans, including vet, hotel, and spa options.</h3>
+                      <h3 class="step-heading">Scheduling virtual and in-person appointments with doctors or clinics.</h3>
                     </div>
                   </a>
                   <a data-w-tab="Tab 5" class="step-tabd-link w-inline-block w-tab-link">
