--- a/how-it-works.html
+++ b/how-it-works.html
@@ -66,9 +66,7 @@
               <a href="index.html" class="logo-wrapper remove-mr w-nav-brand"><img src="images/Ayamedica-new-logom.png" loading="lazy" width="300" height="Auto" sizes="(max-width: 767px) 65px, (max-width: 1439px) 75px, 150px" srcset="images/Ayamedica-new-logom-p-500.png 500w, images/Ayamedica-new-logom-p-800.png 800w" alt="" class="logo-image"></a>
               <nav role="navigation" class="nav-menu-2 w-nav-menu">
                 <div class="menu-butoon-wrapper">
-                  <a href="events.html" class="primary-link w-inline-block">
-                    <div class="link-text">Events</div>
-                  </a>
+               
                   <a href="about-ayamedica.html" class="primary-link w-inline-block">
                     <div class="link-text">About Us</div>
                   </a>
@@ -78,6 +76,9 @@
                   <a href="our-partners.html" class="primary-link w-inline-block">
                     <div class="link-text">Our Partners</div>
                   </a>
+                  <a href="events.html" class="primary-link w-inline-block">
+                    <div class="link-text">Events</div>
+                  </a>
                   <a href="contact-us.html" class="primary-link w-inline-block">
                     <div class="link-text">Contact Us</div>
                   </a>
@@ -85,7 +86,7 @@
                     <div class="link-text">Careers</div>
                   </a>
                 </div>
-                <a href="comming-soon.html" target="_blank"  class="menu-button btn-transition w-button">For Clinic</a>
+                <a href="comming-soon.html" class="menu-button btn-transition w-button">For Clinic</a>
                 <!-- <div class="wg-element-2">
                   <div data-w-id="39a04d75-ed1f-6ba8-5f1a-a19d6d38d291" class="wg-element-wrapper sw6">
                     <div data-hover="true" data-delay="300" data-w-id="39a04d75-ed1f-6ba8-5f1a-a19d6d38d292" class="wg-dropdown-1 w-dropdown">
