--- a/our-partners.html
+++ b/our-partners.html
@@ -38,9 +38,7 @@
           <a href="index.html" class="logo-wrapper remove-mr w-nav-brand"><img src="images/Ayamedica-new-logom.png" loading="lazy" width="300" height="Auto" sizes="(max-width: 767px) 65px, (max-width: 1439px) 75px, 150px" srcset="images/Ayamedica-new-logom-p-500.png 500w, images/Ayamedica-new-logom-p-800.png 800w" alt="" class="logo-image"></a>
           <nav role="navigation" class="nav-menu-2 w-nav-menu">
             <div class="menu-butoon-wrapper">
-              <a href="events.html" class="primary-link w-inline-block">
-                <div class="link-text">Events</div>
-              </a>
+             
               <a href="about-ayamedica.html" class="primary-link w-inline-block">
                 <div class="link-text">About Us</div>
               </a>
@@ -50,6 +48,9 @@
               <a href="our-partners.html" aria-current="page" class="primary-link w-inline-block w--current">
                 <div class="link-text">Our Partners</div>
               </a>
+              <a href="events.html" class="primary-link w-inline-block">
+                <div class="link-text">Events</div>
+              </a>
               <a href="contact-us.html" class="primary-link w-inline-block">
                 <div class="link-text">Contact Us</div>
               </a>
@@ -57,7 +58,7 @@
                 <div class="link-text">Careers</div>
               </a>
             </div>
-            <a href="comming-soon.html" target="_blank"  class="menu-button btn-transition w-button">For Clinic</a>
+            <a href="comming-soon.html" class="menu-button btn-transition w-button">For Clinic</a>
             <!-- <div class="wg-element-2">
               <div data-w-id="39a04d75-ed1f-6ba8-5f1a-a19d6d38d291" class="wg-element-wrapper sw6">
                 <div data-hover="true" data-delay="300" data-w-id="39a04d75-ed1f-6ba8-5f1a-a19d6d38d292" class="wg-dropdown-1 w-dropdown">
@@ -141,7 +142,7 @@ function updateSW6FlagDropdownLinks(currentLang){
     <p class="paragraph-36">Ayamedica’s mobile application solution streamlines the long process of sharing medical information, devising effective and efficient solutions to patients and doctors around the Middle East. All types of information are saved and protected through our app and our network. Our networks scope ranges from labs and clinics to schools.  We proudly have partners within the healthcare ecosystem, and outside of the healthcare ecosystem.</p>
   </div>
   <div class="section-6 wf-section">
-    <div class="div-block-13"><img src="images/Picture1.png" loading="lazy" width="439" alt="" class="logo"><img src="images/Picture4.png" loading="lazy" width="422" srcset="images/Picture4-p-500.png 500w, images/Picture4-p-800.png 800w, images/Picture4.png 830w" sizes="(max-width: 479px) 100vw, (max-width: 1439px) 10vw, 16vw" alt="" class="logo"><img src="images/Picture5.jpg" loading="lazy" width="437" srcset="images/Picture5-p-500.jpg 500w, images/Picture5-p-800.jpg 800w, images/Picture5-p-1080.jpg 1080w, images/Picture5.jpg 1100w" sizes="(max-width: 479px) 100vw, (max-width: 1439px) 10vw, 16vw" alt="" class="logo"><img src="images/Picture6.png" loading="lazy" width="189" alt="" class="logo wolf"><img src="images/Picture7.png" loading="lazy" width="306" srcset="images/Picture7-p-500.png 500w, images/Picture7.png 748w" sizes="(max-width: 479px) 100vw, (max-width: 1439px) 10vw, 13vw" alt="" class="image-12"></div>
+    <!-- <div class="div-block-13"><img src="images/Picture1.png" loading="lazy" width="439" alt="" class="logo"><img src="images/Picture4.png" loading="lazy" width="422" srcset="images/Picture4-p-500.png 500w, images/Picture4-p-800.png 800w, images/Picture4.png 830w" sizes="(max-width: 479px) 100vw, (max-width: 1439px) 10vw, 16vw" alt="" class="logo"><img src="images/Picture5.jpg" loading="lazy" width="437" srcset="images/Picture5-p-500.jpg 500w, images/Picture5-p-800.jpg 800w, images/Picture5-p-1080.jpg 1080w, images/Picture5.jpg 1100w" sizes="(max-width: 479px) 100vw, (max-width: 1439px) 10vw, 16vw" alt="" class="logo"><img src="images/Picture6.png" loading="lazy" width="189" alt="" class="logo wolf"><img src="images/Picture7.png" loading="lazy" width="306" srcset="images/Picture7-p-500.png 500w, images/Picture7.png 748w" sizes="(max-width: 479px) 100vw, (max-width: 1439px) 10vw, 13vw" alt="" class="image-12"></div> -->
     <div class="div-block-13"><img src="images/Picture2.png" loading="lazy" width="300" srcset="images/Picture2-p-500.png 500w, images/Picture2.png 765w" sizes="(max-width: 479px) 100vw, (max-width: 1439px) 10vw, 16vw" alt="" class="image-11 logo"><img src="images/Picture3.png" loading="lazy" width="550" srcset="images/Picture3-p-500.png 500w, images/Picture3-p-800.png 800w, images/Picture3.png 969w" sizes="(max-width: 479px) 100vw, (max-width: 1439px) 14vw, 22vw" alt="" class="logo misr"><img src="images/ibsa-logo-rw-min.png" loading="lazy" width="422" alt="" class="logo"><img src="images/DE1PEH1s_400x400.jpg" loading="lazy" width="306" alt="" class="image-12"></div>
   </div>
   <div class="footer">
