update payment form

--- a/payment.html
+++ b/payment.html
@@ -297,7 +297,7 @@
       </div>
       
         
-        <form action="#" method="POST" id="Book-Form">
+        <form action="/api/payment/:payMethod" method="POST" id="Book-Form">
           <div class="FirstName">
             <label for="first-name"> First Name</label>
             <input type="text" name="first-name" class="first-name-input">
@@ -332,7 +332,7 @@
             </div>
           </div>
           <div class="goPayDiv">
-            <button class="Pay-btn"></button>
+            <button class="Pay-btn" type="submit"></button>
           </div>
         </form>
     </section>
